page builder to v3

--- a/resources/assets/sass/v2/common/_common.scss
+++ b/resources/assets/sass/v2/common/_common.scss
@@ -4,12 +4,12 @@
 'button/button',
 'character/character',
 'tribe/tribe',
-'pagination/pagination',
+//'pagination/pagination',
 'statcanvas/statcanvas',
 'alert/alert',
-'package/package',
-'token/package',
-'supporter-tiers/package',
+//'package/package',
+//'token/package',
+//'supporter-tiers/package',
 'markdown-content/markdown',
     //'snow/snow',
 'label/label',
