--- a/resources/assets/sass/v2/pages/_pages.scss
+++ b/resources/assets/sass/v2/pages/_pages.scss
@@ -8,9 +8,9 @@
         'info-rules/_info-rules',
         'inspector/_inspector',
         'news/news',
-        'supplies/supplies',
-        'token/token',
-        'supporter-tier/supporter-tier',
+        //'supplies/supplies',
+        //'token/token',
+        //'supporter-tier/supporter-tier',
         'payment/payment',
-        'subscription/subscriptions',
+        //'subscription/subscriptions',
         'calendar/_calendar';
