--- a/resources/assets/sass/v3/index.scss
+++ b/resources/assets/sass/v3/index.scss
@@ -3,5 +3,6 @@
 body.v3 {
     @import 'layout/_layout',
     'partial/_partial',
-    'forum/forum';
+    'forum/forum',
+    'pagebuilder/index';
 }
