--- a/resources/assets/sass/v3/layout/theme/base-theme.scss
+++ b/resources/assets/sass/v3/layout/theme/base-theme.scss
@@ -136,17 +136,6 @@
         margin-top: 20px;
         box-shadow: none;
 
-        .frame-title {
-            background: var(--content-title-bg-color);
-            padding:15px 25px;
-            margin:-15px -25px 1rem;
-
-            .title {
-                font-size:1.3rem;
-                line-height: 1.5rem;
-                margin-bottom: 0;
-            }
-        }
 
         //frame
         > table {
@@ -158,14 +147,14 @@
 
         .contentwrap {
             z-index: 1;
-            margin: -10px -10px -10px;
+            margin: -2px -5px !important;
 
             @include border-radius(0);
             @include box-shadow(0 0 60px -15px #000);
             overflow: visible;
 
             @media (min-width: 768px) {
-                padding: 15px 35px 40px;
+                padding: 2rem;
             }
         }
 
@@ -281,83 +270,96 @@
 }
 
 .btn-theme {
-    width: 209px;
-    height: 53px;
-    background-size: cover;
-    background-color: transparent;
-    background-repeat: no-repeat;
-    overflow: hidden;
 
-    border: none;
-    padding:1rem 0.3rem;
+    &.btn-theme-basic {
+        background-image: none;
 
-    transition: background-image 0.2s ease;
+        &:active,
+        &:focus,
+        &:hover {
+            background-image: none;
+        }
+    }
 
-    &:active,
-    &:focus,
-    &:hover {
+    &:not(.btn-theme-basic) {
+        width: 209px;
+        height: 53px;
+        background-size: cover;
         background-color: transparent;
-        box-shadow: none;
-        border:none;
-        outline:0;
-    }
-
-    &.disabled {
-        cursor: pointer;
-    }
-
-    span {
-        display: block;
-        padding:0;
-        font-weight: bold;
-        color:#fff !important;
-        text-transform: uppercase;
-        text-align: center;
+        background-repeat: no-repeat;
         overflow: hidden;
-        opacity:.9;
 
-        transition: color 0.2s ease;
-    }
+        border: none;
+        padding: 1rem 0.3rem;
 
-    &.btn-theme-gem {
+        transition: background-image 0.2s ease;
 
-    }
-
-    &.btn-theme-rock {
-        width: 226px;
-        height: 64px;
-        margin-top:-10px;
-        margin-left:-17px;
-        background-position: -1px -1px;
-
-        span {
-            padding:11px 0 0 5px;
+        &:active,
+        &:focus,
+        &:hover {
+            background-color: transparent;
+            box-shadow: none;
+            border: none;
+            outline: 0;
         }
 
-        &.center {
-            margin-left:auto;
-            transform: translateX(-9px);
+        &.disabled {
+            cursor: pointer;
         }
-    }
-
-    &.small {
-        width: 122px;
-        height: 31px;
-        padding:.5rem 0.3rem;
-        margin-left:0px;
 
         span {
-            font-size:.7rem;
+            display: block;
+            padding: 0;
+            font-weight: bold;
+            color: #fff !important;
+            text-transform: uppercase;
+            text-align: center;
+            overflow: hidden;
+            opacity: .9;
+
+            transition: color 0.2s ease;
+        }
+
+        &.btn-theme-gem {
+
         }
 
         &.btn-theme-rock {
-            width: 130px;
-            height: 37px;
-            margin-top:-5px;
-            margin-left:-8px;
+            width: 226px;
+            height: 64px;
+            margin-top: -10px;
+            margin-left: -17px;
+            background-position: -1px -1px;
 
             span {
-                padding:5px 0 0 8px;
+                padding: 11px 0 0 15px;
+            }
+
+            &.center {
+                margin-left: auto;
+                transform: translateX(-9px);
+            }
+        }
+
+        &.small {
+            width: 122px;
+            height: 31px;
+            padding: .5rem 0.3rem;
+            margin-left: 0px;
+
+            span {
+                font-size: .7rem;
+            }
+
+            &.btn-theme-rock {
+                width: 130px;
+                height: 37px;
+                margin-top: -5px;
+                margin-left: -8px;
+
+                span {
+                    padding: 5px 0 0 8px;
+                }
             }
         }
     }
