--- a/resources/assets/sass/v3/partial/frame.scss
+++ b/resources/assets/sass/v3/partial/frame.scss
@@ -8,21 +8,10 @@
         border-collapse: separate;
     }
 
-    &.no-padding {
-
-        &.simple,
-        &.big,
-        &.basic {
-            .contentwrap {
-                padding:0 !important;
-            }
-        }
-    }
-
     &.basic {
         position: relative;
         background-color:var(--transparent-bg);
-        padding:20px;
+        padding:1rem;
         margin-bottom:30px;
         overflow: hidden;
 
@@ -30,18 +19,6 @@
 
         @include border-radius(5px);
         @include box-shadow(0 0 60px -15px #000);
-
-        .frame-title {
-            background: var(--content-title-bg-color);
-            padding:15px 30px;
-            margin:-20px -30px 1.1rem;
-
-            .title {
-                font-size:1.3rem;
-                line-height: 1.5rem;
-                margin-bottom: 0;
-            }
-        }
 
         &.forum-thread-table {
             padding-bottom:0;
@@ -52,39 +29,64 @@
         }
     }
 
+    &.basic,
     &.simple,
     &.big {
-        position: relative;
-        margin-bottom: 60px;
-
         .frame-title {
             background: var(--content-title-bg-color);
-            padding:15px 30px;
-            margin:-20px -30px 1.1rem;
+            padding:1rem 2rem;
+            margin:-2rem -2rem 2rem;
 
             .title {
                 font-size:1.3rem;
                 line-height: 1.5rem;
+                margin-top: 0;
                 margin-bottom: 0;
             }
         }
+
+        .frame-footer {
+            background: var(--content-title-bg-color);
+            padding:1rem 2rem;
+            margin: 2rem -2rem -2rem;
+        }
+    }
+
+    &.no-padding {
+
+        &.basic {
+            padding:0;
+        }
+
+        &.basic,
+        &.simple,
+        &.big, {
+            .contentwrap {
+                padding: 0 !important;
+            }
+
+            .frame-title {
+                margin: 0;
+            }
+        }
+    }
+
+    &.simple,
+    &.big {
+        position: relative;
+        margin-bottom: 60px;
 
         @include box-shadow(0 0 60px -15px #000);
 
         .contentwrap {
             position: relative;
             display: block;
-            padding: 15px 20px 20px;
+            padding: 2rem;
             background: var(--content-bg-color);
             margin: -1px;
-
-            @include border-radius(5px);
             overflow: hidden;
 
-
-            @media (min-width: 768px) {
-                padding: 20px 30px 25px !important;
-            }
+            @include border-radius(5px);
 
             @import "./../layout/default-content";
 
@@ -98,26 +100,13 @@
                 background-size: cover;
                 background-position: center center;
                 padding: 7rem 0;
-                margin: -15px -30px 20px;
+                margin: -2rem -2rem 2rem;
 
                 height: 15rem;
 
-                //&:before {
-                //    position: absolute;
-                //    display:block;
-                //    content: ' ';
-                //    background:rgba(0,0,0,.3);
-                //    top:0;
-                //    right:0;
-                //    bottom:0;
-                //    left:0;
-                //}
-
                 .title {
-                    //text-shadow: 1px 1px 13px #000;
-                    //text-align: center;
                     position: absolute;
-                    padding: 5px 15px 5px 25px;
+                    padding: .5rem 1rem .5rem 2rem;
                     background-color: rgba(0, 0, 0, .7);
                     top: auto;
                     bottom: 5px;
@@ -151,19 +140,8 @@
             }
 
             @media (min-width: 768px) {
-                padding: 15px 30px 40px;
-
                 .header {
                     height: 30rem;
-
-                    .title {
-                        padding: 5px 15px 5px 24px;
-                        max-width: 70%;
-                    }
-                }
-
-                .meta {
-                    margin-bottom: 2rem;
                 }
             }
         }
