--- a/resources/assets/sass/v3/partial/frame.scss
+++ b/resources/assets/sass/v3/partial/frame.scss
@@ -42,6 +42,7 @@
                 line-height: 1.5rem;
                 margin-top: 0;
                 margin-bottom: 0;
+                color:var(--secondary-color);
             }
         }
 
