--- a/resources/assets/sass/v3/partial/frame.scss
+++ b/resources/assets/sass/v3/partial/frame.scss
@@ -72,6 +72,17 @@
         }
     }
 
+    &.center-title {
+
+        &.basic,
+        &.simple,
+        &.big, {
+            .frame-title {
+                text-align: center;
+            }
+        }
+    }
+
     &.simple,
     &.big {
         position: relative;
