--- a/resources/assets/sass/v3/partial/frame.scss
+++ b/resources/assets/sass/v3/partial/frame.scss
@@ -53,6 +53,25 @@
         }
     }
 
+    &.tiny-padding {
+
+        &.basic {
+            padding:.5rem;
+        }
+
+        &.basic,
+        &.simple,
+        &.big, {
+            .contentwrap {
+                padding: .5rem !important;
+            }
+
+            .frame-title {
+                margin: -.5rem -.5rem .5rem;
+            }
+        }
+    }
+
     &.no-padding {
 
         &.basic {
