--- a/resources/assets/sass/v3/partial/stat_canvas.scss
+++ b/resources/assets/sass/v3/partial/stat_canvas.scss
@@ -1,3 +1,9 @@
 .stat_canvas {
     height:300px;
+
+    color:var(--content-text-color);
+
+    .legend {
+        color:var(--content-text-color);
+    }
 }
