canvas text fix

--- a/resources/assets/sass/v3/partial/stat_canvas.scss
+++ b/resources/assets/sass/v3/partial/stat_canvas.scss
@@ -3,7 +3,8 @@
 
     color:var(--content-text-color);
 
-    .legend {
+    .legend,
+    .flot-text {
         color:var(--content-text-color);
     }
 }
