fix stat canvas color

--- a/resources/assets/sass/v3/partial/stat_canvas.scss
+++ b/resources/assets/sass/v3/partial/stat_canvas.scss
@@ -5,6 +5,6 @@
 
     .legend,
     .flot-text {
-        color:var(--content-text-color);
+        color:var(--content-text-color) !important;
     }
 }
