--- a/resources/assets/sass/v3/pagebuilder/index.scss
+++ b/resources/assets/sass/v3/pagebuilder/index.scss
@@ -20,7 +20,8 @@
     'blocks/spotlight',
     'blocks/forms',
     'blocks/twitch',
-    'blocks/discord';
+    'blocks/discord',
+    'blocks/center-title';
 
     .container-fluid {
         &.white {
