tweak active tribes

--- a/resources/assets/sass/v3/pagebuilder/index.scss
+++ b/resources/assets/sass/v3/pagebuilder/index.scss
@@ -21,7 +21,8 @@
     'blocks/forms',
     'blocks/twitch',
     'blocks/discord',
-    'blocks/center-title';
+    'blocks/center-title',
+    'blocks/active-tribes';
 
     .container-fluid {
         &.white {
