--- a/resources/assets/sass/v3/pagebuilder/index.scss
+++ b/resources/assets/sass/v3/pagebuilder/index.scss
@@ -18,11 +18,11 @@
     'blocks/servers',
     'blocks/stats',
     'blocks/spotlight',
-    'blocks/forms',
     'blocks/twitch',
     'blocks/discord',
     'blocks/center-title',
-    'blocks/active-tribes';
+    'blocks/active-tribes',
+    'blocks/forum-activity';
 
     .container-fluid {
         &.white {
