--- a/resources/assets/sass/v3/pagebuilder/index.scss
+++ b/resources/assets/sass/v3/pagebuilder/index.scss
@@ -14,7 +14,7 @@
     "blocks/youtube",
     "blocks/big_banner",
     'blocks/banner',
-    'blocks/latest',
+    'blocks/news-activity',
     'blocks/servers',
     'blocks/stats',
     'blocks/spotlight',
