pageblock bottom margin fix

--- a/resources/assets/sass/v3/layout/theme/base-theme.scss
+++ b/resources/assets/sass/v3/layout/theme/base-theme.scss
@@ -134,8 +134,13 @@
     &.simple,
     &.big {
         margin-top: 20px;
+        //margin-bottom:20px;
         box-shadow: none;
 
+
+        &.no-bottom-margin {
+            margin-bottom:20px;
+        }
 
         //frame
         > table {
