fix empty title + custom character images + tweaks

--- a/resources/assets/sass/v3/partial/character-card.scss
+++ b/resources/assets/sass/v3/partial/character-card.scss
@@ -6,6 +6,10 @@
         position: absolute;
         top:1rem;
         left:1rem;
+
+        .label {
+            margin-right:.5rem
+        }
     }
 
     .image {
