--- a/resources/assets/sass/v3/layout/theme/base-theme.scss
+++ b/resources/assets/sass/v3/layout/theme/base-theme.scss
@@ -195,7 +195,7 @@
 
         .contentwrap {
             margin: -6px;
-            min-height:190px;
+            //min-height:190px;
         }
 
         .decoration-top {
