--- a/resources/assets/sass/v3/pagebuilder/blocks/news-activity.scss
+++ b/resources/assets/sass/v3/pagebuilder/blocks/news-activity.scss
@@ -23,6 +23,10 @@
             font-size: 1.5rem;
             line-height: 1.5rem;
             margin-bottom: 1rem;
+
+            a {
+                color:var(--content-text-color) !important;
+            }
         }
     }
     
