remove old views + tweak styling + error pages etc to v3

--- a/resources/assets/sass/v3/forum/thread.scss
+++ b/resources/assets/sass/v3/forum/thread.scss
@@ -10,9 +10,9 @@
 .table-thread {
 
     .thread-list-item {
-        margin-left:-20px;
-        margin-right:-20px;
-        padding:.8rem 0;
+        //margin-left:-20px;
+        //margin-right:-20px;
+        padding:.8rem 1rem;
 
 
         &:hover {
