--- a/resources/assets/sass/v3/layout/theme/base-theme.scss
+++ b/resources/assets/sass/v3/layout/theme/base-theme.scss
@@ -89,6 +89,10 @@
         &:after {
             display:none;
         }
+
+        .navbar-brand {
+            margin-left:15px;
+        }
     }
 
     .container {
