--- a/resources/assets/sass/v3/pagebuilder/index.scss
+++ b/resources/assets/sass/v3/pagebuilder/index.scss
@@ -118,68 +118,74 @@
         }
 
         @media (max-width:991px) {
-            &-0 {
+
+            &-0, &-1, &-2, &-3 {
+                padding-top:1rem;
+                padding-bottom:1rem;
+            }
+
+            &-0 > div {
                 padding-top:15px;
                 padding-bottom:15px;
             }
 
-            &-1 {
+            &-1 > div {
                 padding-top:15px;
                 padding-bottom:15px;
             }
 
-            &-2 {
+            &-2 > div {
                 padding-top:30px;
                 padding-bottom:30px;
             }
 
-            &-3 {
+            &-3 > div {
                 padding-top:60px;
                 padding-bottom:60px;
             }
         }
 
         @media (max-width:767px) {
-            &-0 {
-                padding-top:15px;
-                padding-bottom:15px;
+            &-0 > div {
+                padding-top:1rem;
+                padding-bottom:1rem;
             }
 
-            &-1 {
-                padding-top:15px;
-                padding-bottom:15px;
+            &-1 > div {
+                padding-top:1rem;
+                padding-bottom:1rem;
             }
 
-            &-2 {
-                padding-top:15px;
-                padding-bottom:15px;
+            &-2 > div {
+                padding-top:1rem;
+                padding-bottom:1rem;
             }
 
-            &-3 {
-                padding-top:30px;
-                padding-bottom:30px;
+            &-3 > div {
+                padding-top:2rem;
+                padding-bottom:2rem;
             }
         }
 
         @media (max-width:500px) {
-            &-0 {
-                padding-top:15px;
-                padding-bottom:15px;
+            &-0 > div {
+                padding-top:1rem;
+                padding-bottom:1rem;
             }
 
-            &-1 {
-                padding-top:15px;
-                padding-bottom:15px;
+            &-1 > div {
+                padding-top:1rem;
+                padding-bottom:1rem;
             }
 
-            &-2 {
-                padding-top:15px;
-                padding-bottom:15px;
+            &-2 > div {
+                padding-top:1rem;
+                padding-bottom:1rem;
             }
 
-            &-3 {
-                padding-top:15px;
-                padding-bottom:15px;
+            &-3 > div {
+                padding-top:1rem;
+                padding-bottom:1rem;
             }
         }
     }
