--- a/resources/assets/sass/v3/layout/theme/theme-aberration.scss
+++ b/resources/assets/sass/v3/layout/theme/theme-aberration.scss
@@ -1,7 +1,7 @@
 &.theme-aberration {
     @import 'base-theme';
 
-    .navbar {
+    .main-nav {
         background-image:url('/img/themes_copyright/aberration/menu-repeat.png');
 
         &.passed-banner:before,
