--- a/resources/assets/sass/v3/layout/theme/theme-atlas-kraken.scss
+++ b/resources/assets/sass/v3/layout/theme/theme-atlas-kraken.scss
@@ -1,7 +1,7 @@
 &.theme-atlas-kraken {
     @import 'base-theme';
 
-    .navbar {
+    .main-nav {
         background-image:url('/img/themes_copyright/atlas-kraken/menu-repeat.png') !important;
 
         &.passed-banner:before,
