--- a/resources/assets/sass/v3/layout/theme/theme-extinction.scss
+++ b/resources/assets/sass/v3/layout/theme/theme-extinction.scss
@@ -1,7 +1,7 @@
 &.theme-extinction {
     @import 'base-theme';
 
-    .navbar {
+    .main-nav {
         background-image:url('/img/themes_copyright/extinction/menu-repeat.png');
 
         &.passed-banner:before,
