--- a/resources/assets/sass/v3/layout/content/group-single.scss
+++ b/resources/assets/sass/v3/layout/content/group-single.scss
@@ -20,7 +20,8 @@
             }
 
             h1 {
-                margin-bottom:.5rem
+                margin-bottom:.5rem;
+                text-shadow: 1px 1px 13px  #000;
             }
 
 
