tweaks + isGroupMember fix

--- a/resources/assets/sass/v3/layout/default-content.scss
+++ b/resources/assets/sass/v3/layout/default-content.scss
@@ -69,6 +69,8 @@ select,
 select:focus,
 select:active,
 input[type=text],
+input[type=email],
+input[type=number],
 textarea {
     background-color:var(--transparent-bg);
     color:var(--primary-color);
