--- a/resources/assets/sass/v3/partial/frame.scss
+++ b/resources/assets/sass/v3/partial/frame.scss
@@ -46,7 +46,7 @@
         //@include box-shadow(0 0 30px -15px #000);
 
         @include border-radius(5px);
-        @include box-shadow(0 0 60px -15px #000);
+        @include box-shadow(var(--frame-shadow));
     }
 
     &.tiny-padding {
@@ -126,7 +126,7 @@
         position: relative;
         margin-bottom: 4rem;
 
-        @include box-shadow(0 0 60px -15px #000);
+        @include box-shadow(var(--frame-shadow));
 
         .contentwrap {
             position: relative;
