--- a/resources/assets/sass/v3/pagebuilder/blocks/forum-activity.scss
+++ b/resources/assets/sass/v3/pagebuilder/blocks/forum-activity.scss
@@ -17,7 +17,7 @@
             display: inline-block;
             font-size:1.5rem;
             line-height: 1.5rem;
-            margin-bottom:0;
+            margin-bottom:.5rem;
 
             a {
                 color:var(--content-text-color) !important;
