--- a/resources/assets/sass/v3/partial/label.scss
+++ b/resources/assets/sass/v3/partial/label.scss
@@ -1,5 +1,5 @@
 .label-theme {
-    color:var(--bg-color) !important;
+    color:var(--transparent-bg) !important;
     background-color:var(--secondary-color);
     text-decoration: none !important;
     padding:.2rem .4rem;
