tweaks + user activity

--- a/resources/assets/sass/v3/partial/frame.scss
+++ b/resources/assets/sass/v3/partial/frame.scss
@@ -17,7 +17,7 @@
             margin:-2rem -2rem 2rem;
 
             .title {
-                font-size:1.3rem;
+                font-size:1.1rem;
                 line-height: 1.5rem;
                 margin-top: 0;
                 margin-bottom: 0;
@@ -41,6 +41,7 @@
 
         .frame-title {
             margin-top:-1rem;
+            margin-bottom:1rem;
         }
 
         //@include box-shadow(0 0 30px -15px #000);
