--- a/resources/assets/sass/v3/layout/content/character-single.scss
+++ b/resources/assets/sass/v3/layout/content/character-single.scss
@@ -111,4 +111,14 @@
         }
     }
 
+    &.about {
+
+        .image {
+            width:auto;
+            height:auto;
+            max-width: 200px;
+            max-height:200px;
+        }
+    }
+
 }
