--- a/resources/assets/sass/v3/layout/content/character-single.scss
+++ b/resources/assets/sass/v3/layout/content/character-single.scss
@@ -113,7 +113,8 @@
 
     &.about {
 
-        .image {
+        .image,
+        .image img {
             width:auto;
             height:auto;
             max-width: 200px;
