label custom color + fix graph inherit theme color

--- a/resources/assets/sass/v3/partial/label.scss
+++ b/resources/assets/sass/v3/partial/label.scss
@@ -1,11 +1,11 @@
 .label-theme {
-    color:var(--transparent-bg) !important;
-    background-color:var(--secondary-color);
+    color:var(--label-color) !important;
+    background-color:var(--label-bg);
     text-decoration: none !important;
     padding:.2rem .4rem;
 
     a {
-        color:var(--bg-color) !important;
+        color:var(--label-color) !important;
         text-decoration: underline;
         
         &:hover {
@@ -21,7 +21,7 @@
     }
 
     &.alternative {
-        background-color:var(--transparent-bg);
-        color:var(--secondary-color) !important;
+        background-color:var(--label-color);
+        color:var(--label-bg) !important;
     }
 }
