--- a/resources/assets/sass/v3/partial/article.scss
+++ b/resources/assets/sass/v3/partial/article.scss
@@ -35,6 +35,10 @@
                 position: absolute;
                 top:1rem;
                 left:1rem;
+
+                .label {
+                    margin-right:1rem;
+                }
             }
 
             .content {
